<resources>
    <string name="app_name" translatable="false">LightTask</string>
    <string name="titleActivityMain" translatable="false">MainActivity</string>
    <string name="titleActivityAdd">Create task</string>
    <string name="titleChangeTask">Chagne task</string>

    <string name="appBar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="tasks">Tasks</string>
    <string name="reminders">Reminders</string>
    <string name="groups">Groups</string>

    <string name="subtasks_arrow_down" translatable="false"></string>
    <string name="subtasks_arrow_up" translatable="false">\uf0de</string>

    <string name="compoundCompleted">"Compound task completed, delete it"</string>
    <string name="subtaskCompleted">Subtask completed</string>
    <string name="taskCompleted">Task completed</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="ok" translatable="false">OK</string>
    <string name="today">Today</string>
    <string name="every">Every</string>
    <string name="off" translatable="false">OFF</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="number">Number</string>

    <string name="no_tasks">No tasks here</string>
    <string name="no_reminders">No reminders here</string>
    <string name="noTaskSummary">Tap + to create them</string>
    <string name="sleep_cloud" translatable="false">sleep cloud</string>
    <string name="deletingToday">You cannot delete Today group</string>
    <string name="changingToday">You cannot change Today group</string>

    <string name="taskName">Name</string>
    <string name="taskDate">Date</string>
    <string name="taskGroup">Group</string>
    <string name="remind">Remind</string>
    <string name="taskRepeat">Repeat</string>
    <string name="taskSubtaskHint">Subtasks</string>
    <string name="subtaskHelperText">Spread subtasks by comma</string>

    <string name="action_add">Add</string>

    <string name="emptyNameError">Enter the name, please</string>
    <string name="wrongDateError">Past time can not be set</string>
    <string name="wrongGroupName">Wrong group name</string>
    <string name="wrongReminderName">Wrong reminder name</string>
    <string name="wrongReminderTime">Wrong reminder time</string>

    <string name="groupDialogButton">Add group</string>
    <string name="groupDialogTitle">Choose the group</string>

    <string name="groupAddDialogHint">Group name</string>
    <string name="groupAddDialogTitle">Create new group</string>

    <string name="remindDialogTitle">Remind … before</string>
    <string-array name="remindArray">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1 day</item>
        <item>Choose other</item>
    </string-array>

    <string name="reminderDialogTitle">Create reminder</string>
    <string name="reminderNameDialogHint">Reminder name</string>
    <string name="reminderDialogError">Wrong name</string>
    <string name="reminderDialogText">Repeat every:</string>

    <string name="changeGroupDialogTitle">Change group</string>
    <string name="changeRemidnerDialogTitle">Change reminder</string>


    <string name="taskRecieverTitle">Task!</string>
    <string name="reminderRecieveTitle">Reminder!</string>
    <string name="taskRemindRecieverTitle">Task reminder!</string>

    <string name="doneRecieverAction">Done</string>

    <string name="ownTaskRemindTitle">Set own time</string>
    <string-array name="timeArr">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <string name="fabDialogTitle">Create</string>
    <string-array name="fabDialogArr">
        <item>Task</item>
        <item>Reminder</item>
    </string-array>

    <string name="about">About app</string>
    <string name="aboutImg" translatable="false">Logo</string>
    <string name="aboutVersion">Version 1.0</string>
    <string name="aboutMade">Made by Sergey Kushnaryov</string>
    <string name="remindError">Wrong remind time</string>
    <string name="remindDateError">You can not set task remind without setting date</string>

</resources>
