<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_task" />

    <ImageView
        android:id="@+id/sleep_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/sleep_cloud"
        android:src="@drawable/sleep"
        app:layout_constraintBottom_toTopOf="@id/noTask_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/noTask_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/summary_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_img"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/summary_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noTaskSummary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noTask_textView"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>