<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/sixty_padding"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminderName_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminderNameDialogHint"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reminder_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminderName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/reminder_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/reminderName_text_input"
        app:layout_constraintBottom_toTopOf="@id/reminderTime_edit_text"
        android:text="@string/reminderDialogText"/>

    <EditText
        android:id="@+id/reminderTime_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminder_textView"
        app:layout_constraintWidth_percent="0.3" />

    <Spinner
        android:id="@+id/reminderTimeType_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/reminderTime_edit_text"
        app:layout_constraintTop_toBottomOf="@id/reminder_textView"
        app:layout_constraintWidth_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>